[package]
name = "clocked"
version = "0.1.0"
edition = "2021"

[dependencies]
rtrb = "0.2.3"
rubato = "0.14.1"
smallvec = "1.11.0"

cpal = { version = "0.15.2", optional = true }
midir = { version = "0.8.0", optional = true }
snafu = "0.7.5"
dasp_sample = "0.11.0"
dasp_slice = "0.11.0"
nalgebra = "0.32.3"

[dev-dependencies]
hound = "3.5.0"

[features]
client_impls = ["dep:cpal", "dep:midir"]
default = ["client_impls"]
