[package]
name = "clocked"
description = "A collection of tools for synchronizing asynchronous audio streams."
categories = ["game-development", "api-bindings"]
keywords = ["audio", "kiss", "sound"]
readme = "README.md"
version = "0.7.0"
documentation = "https://docs.rs/clocked"
homepage = "https://github.com/smj-edison/clocked"
repository = "https://github.com/smj-edison/clocked"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
rtrb = "0.2.3"
cpal = { version = "0.15.2", optional = true }
midir = { version = "0.8.0", optional = true }
serde = { version = "1.0.133", features = ["derive"], optional = true }
dasp_sample = "0.11.0"
dasp_slice = "0.11.0"
nalgebra = "0.32.3"

[dev-dependencies]
hound = "3.5.0"

[features]
serde = ["dep:serde"]
client_impls = ["dep:cpal", "dep:midir"]
default = ["client_impls", "serde"]
